@@ -1,3 +1,9 @@
+Thu Feb 17 16:50:23 UTC 2011  Adam Mitz  <mitza@ociweb.com>
+
+        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
+
+          Updated dependency list by using the "Compute" button in Eclipse.
+
 Thu Feb 17 16:12:26 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>
 
         * tools/modeling/codegen/model/Sync.h:
